// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveContent() mediaType not provided returns default content 1`] = `
Object {
  "mediaType": "*",
}
`;

exports[`resolveContent() mediaType provided specific content does not exist returns default content 1`] = `
Object {
  "mediaType": "*",
}
`;

exports[`resolveContent() mediaType provided specific content exists returns specific content 1`] = `
Object {
  "mediaType": "application/exists-son",
}
`;
